--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,32 @@
 baseurl = "https://www.jayasinghe.de"
-languageCode = "de-de"
+languageCode = "en-us"
 title = "rob's website"
 theme = "hugo-nes-classic"
+
+
+[menu]
+
+    [[menu.main]]
+        name = "Home"
+        url = "/"
+        weight = 1
+
+    [[menu.main]]
+        name = "Blog"
+        url = "/post"
+        weight = 2
+
+    [[menu.main]]
+        name = "Imprint"
+        url = "/page/imprint"
+        weight = 3
+
+    [[menu.main]]
+        name = "Contact"
+        url = "/page/contact"
+        weight = 4
+
+    [[menu.main]]
+        name = "About"
+        url = "/page/about"
+        weight = 5
