--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-nes-classic"]
 	path = themes/hugo-nes-classic
 	url = https://github.com/rjayasinghe/hugo-nes-classic
+[submodule "themes/solar-theme-hugo"]
+	path = themes/solar-theme-hugo
+	url = https://github.com/bake/solar-theme-hugo.git
