--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ copyright = "© 2020 - Robin de Silva Jayasinghe"
 
 [params]
   scheme = "light"
-  description = "/dev/braindump"
+  description = "Don't panic or you won't enjoy the apocalypse! 🤪"
 
 [menu]
 
